Comparing algorithm